# cpp_project_template

./: CMakeLists.txt  README.md  init.sh  test
src/: CMakeLists.txt  main.cpp  main.h
src/@project_name@/: @project_name@.cpp  @project_name@.h  CMakeLists.txt
